@@ -423,9 +423,22 @@ bool CamuleApp::OnInit()
 	// Build the filenames for the two OS files
 	SetOSFiles(thePrefs::GetOSDir().GetRaw());
 
+	// Check if we have the old style locale config
+	bool old_localedef = false;
+	wxString langId = thePrefs::GetLanguageID();
+	if (!langId.IsEmpty() && (langId.GetChar(0) >= '0' && langId.GetChar(0) <= '9')) {
+		old_localedef = true;
+		thePrefs::SetLanguageID(wxLang2Str(wxLANGUAGE_DEFAULT));
+		glob_prefs->Save();
+	}
+
 #ifdef ENABLE_NLS
 	// Load localization settings
 	Localize_mule();
+
+	if (old_localedef) {
+		ShowAlert(_("Your locale has been changed to System Default due to a configuration change. Sorry."), _("Info"), wxCENTRE | wxOK | wxICON_ERROR);
+	}
 #endif
 
 	// Configure EC for amuled when invoked with ec-config
@@ -485,14 +498,6 @@ bool CamuleApp::OnInit()
 
 		vfile.Write();
 		vfile.Close();
-	}
-
-	// Check if we have the old style locale config
-	wxString langId = thePrefs::GetLanguageID();
-	if (!langId.IsEmpty() && (langId.GetChar(0) >= '0' && langId.GetChar(0) <= '9')) {
-		wxString info(_("Your locale has been changed to System Default due to a configuration change. Sorry."));
-		thePrefs::SetLanguageID(wxLang2Str(wxLANGUAGE_DEFAULT));
-		ShowAlert(info, _("Info"), wxCENTRE | wxOK | wxICON_ERROR);
 	}
 
 	m_statistics = new CStatistics();
