@@ -18,6 +18,8 @@ Version 2.4.0 - The river knows.
 		* Fix bfd detection for systems missing -liberty
 		* Add support for 'canceled.met' to the fileview tool
 		* Implemented the missing 'show shared' command in amulecmd
+		* Fix check for a valid locale config entry being done *after*
+		  the locale has been set
 
 	iz0bbz:
 		* Fix WinSock library version detection with MinGW-w64
